--- a/progress.css
+++ b/progress.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: #000;
+    background: #fff;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -53,6 +53,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.418);
    ;
 }
 .box p{
